--- a/ddmultiplefields/ddmultiplefields.css
+++ b/ddmultiplefields/ddmultiplefields.css
@@ -10,9 +10,10 @@
 	text-decoration: none;
 }
 
-.ddMultipleField input, .ddMultipleField textarea {
-	border: 1px solid #C8C8C8 !important;
+.ddMultipleField input,
+.ddMultipleField textarea {
 	padding: 0.2em 0.533em 0.333em !important;
+	border: 1px solid #C8C8C8 !important;
 	margin-right: 5px;
 	font: 12px/1.2em Verdana,Helvetica,sans-serif !important;
 }
@@ -31,19 +32,22 @@
 
 .ddMultipleField textarea {resize: vertical;}
 
-.ddMultipleField tr th, .ddMultipleField tr td.ddFieldCol {
+.ddMultipleField tr th,
+.ddMultipleField tr td.ddFieldCol {
 	min-height: 23px;
 	padding: 5px 7px;
 	vertical-align: top;
 }
 
-.ddMultipleField tr th, .ddMultipleField tr td.ddFieldCol:last-child {
+.ddMultipleField tr th,
+.ddMultipleField tr td.ddFieldCol:last-child {
 	white-space: nowrap;
 }
 
 .ddMultipleField tr th {text-align: left;}
 
-.ddMultipleField tr td.ddFieldCol, .ddMultipleField tr td.ddSortHandle {
+.ddMultipleField tr td.ddFieldCol,
+.ddMultipleField tr td.ddSortHandle {
 	border: 2px solid #FFFFFF;
 	-webkit-transition: background 0.3s ease-out;
 	-moz-transition: background 0.3s ease-out;
@@ -67,9 +71,6 @@
 	text-align: center;
 }
 
-/* .ddMultipleField tr td:first-child {border-radius: 7px 0 0 7px;}
-.ddMultipleField tr td:last-child {border-radius: 0 7px 7px 0;} */
-
 .ddMultipleField tr td.ddSortHandle {
 	border-right: none;
 	width: 16px;
@@ -80,7 +81,6 @@
 .ddMultipleField tr td.ddFieldCol:nth-child(2) {border-left: none;}
 
 .ddMultipleField tr td.ddSortHandle div {
-/* 	border-radius: 0 12px 12px 0; */
 	background: #007CC3;
 	width: 10px;
 	height: 23px;
@@ -93,7 +93,8 @@
 	cursor: n-resize;
 }
 
-.ddMultipleField tr.ddFieldBlock:hover td.ddFieldCol, .ddMultipleField tr.ddFieldBlock:hover td.ddSortHandle {background: #B2E3FF;}
+.ddMultipleField tr.ddFieldBlock:hover td.ddFieldCol,
+.ddMultipleField tr.ddFieldBlock:hover td.ddSortHandle {background: #B2E3FF;}
 
 .ddMultipleField tr.ddFieldBlock:hover td.ddSortHandle div {opacity: 1;}
 
@@ -105,9 +106,7 @@
 .ddMultipleField .ui-state-highlight td {padding: 0;}
 
 .ddMultipleField .ui-state-highlight div {
-/* 	border: 1px solid #84c225; */
-/* 	border-radius: 3px; */
-	background: rgba(0,0,0,.07);
 	width: 100%;
 	height: 100%;
+	background: rgba(0, 0, 0, .07);
 }
